--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,9 @@ inputs:
   private-registry:
     description: "URL Name of private Docker registry to push to"
     default: "hub.docker.com"
-
+outputs:
+  new_tag:
+    description: "Empty if no new tag has been released"
 runs:
   using: "composite"
   steps:
