--- a/action.yml
+++ b/action.yml
@@ -8,9 +8,9 @@ branding:
   color: "red"
 
 inputs:
-  private-registry:
+  REGISTRY_URL:
     description: "URL Name of private Docker registry to push to"
-    default: "hub.docker.com"
+    default: "ghcr.io"
   REGISTRY_USER:
     description: "Registry user"
     required: true
@@ -55,7 +55,7 @@ runs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        registry: ${{ inputs.private-registry }}
+        registry: ${{ inputs.REGISTRY_URL }}
         username: ${{ inputs.REGISTRY_USER }}
         password: ${{ inputs.REGISTRY_PWD }}
 
