--- a/action.yml
+++ b/action.yml
@@ -41,16 +41,9 @@ runs:
       with:
         string: ${{ github.event.repository.name }}
 
-    - name: Set output
-      id: tag_short
-      shell: bash
-      run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
-
-    - name: Define version tag
-      uses: ASzc/change-string-case-action@v5
-      id: tag
-      with:
-        string: ${{ steps.tag_short.outputs.tag }}
+    - name: Get Latest Tag
+      uses: WyriHaximus/github-action-get-previous-tag@v1.3.0
+      id: git_tag
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -63,7 +56,7 @@ runs:
       shell: bash
       env:
         IMAGE_NAME: ${{ steps.owner_name.outputs.lowercase }}/${{ steps.repo_name.outputs.lowercase }}
-        IMAGE_VERSION: ${{ steps.tag.outputs.lowercase }}
+        IMAGE_VERSION: ${{ steps.git_tag.outputs.tag }}
       run: |
         docker build \
         -t $IMAGE_NAME:$IMAGE_VERSION \
