--- a/action.yml
+++ b/action.yml
@@ -25,6 +25,7 @@ runs:
       uses: actions/checkout@v4
       with:
         ref: ${{ github.ref }}
+        fetch-depth: 0
 
     - name: Set up Docker BuildX
       uses: docker/setup-buildx-action@v3
