--- a/action.yml
+++ b/action.yml
@@ -30,12 +30,6 @@ runs:
     - name: Set up Docker BuildX
       uses: docker/setup-buildx-action@v3
 
-    - name: Define owner name
-      uses: ASzc/change-string-case-action@v5
-      id: owner_name
-      with:
-        string: ${{ github.repository_owner }}
-
     - name: Define repo name
       uses: ASzc/change-string-case-action@v5
       id: repo_name
@@ -56,7 +50,7 @@ runs:
     - name: Build image to dockerhub
       shell: bash
       env:
-        IMAGE_NAME: ${{ steps.owner_name.outputs.lowercase }}/${{ steps.repo_name.outputs.lowercase }}
+        IMAGE_NAME: ${{ inputs.REGISTRY_USER }}/${{ steps.repo_name.outputs.lowercase }}
         IMAGE_VERSION: ${{ steps.git_tag.outputs.tag }}
       run: |
         docker build \
