--- a/action.yml
+++ b/action.yml
@@ -49,7 +49,7 @@ runs:
       shell: bash
       run: |
         IMAGE_NAME=${{ github.event.repository.name }}
-        IMAGE_NAME=$(echo IMAGE_NAME | tr '[A-Z]' '[a-z]')
+        IMAGE_NAME=$(echo $IMAGE_NAME | tr '[A-Z]' '[a-z]')
         
         IMAGE_ID=${{ inputs.REGISTRY_USER }}/$IMAGE_NAME
         IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
