--- a/action.yml
+++ b/action.yml
@@ -57,8 +57,8 @@ runs:
         echo VERSION=$VERSION
         
         docker build \
-        -t $IMAGE_ID:$IMAGE_VERSION \
+        -t $IMAGE_ID:$VERSION \
         -t $IMAGE_ID:latest .
         
-        docker push $IMAGE_ID:$IMAGE_VERSION
+        docker push $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:latest
