--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,9 @@ inputs:
   REGISTRY_PWD:
     description: "Registry tag"
     required: true
+  PLATFORMS:
+    description: "Platforms to build to"
+    default: "linux/amd64,darwin/arm64,windows/amd64"
 outputs:
   page_url:
     value:
@@ -56,7 +59,7 @@ runs:
         echo VERSION=$VERSION
         
         docker buildx build \
-        --platform linux/amd64,linux/arm64,darwin/amd64 \
+        --platform ${{inputs.PLATFORMS}} \
         -t $IMAGE_ID:$VERSION \
         -t $IMAGE_ID:latest \
         .
