--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
     required: true
   PLATFORMS:
     description: "Platforms to build to"
-    default: "linux/amd64,darwin/arm64,windows/amd64"
+    default: "linux/amd64,darwin/arm64"
 outputs:
   page_url:
     value:
