--- a/action.yml
+++ b/action.yml
@@ -19,11 +19,7 @@ inputs:
     required: true
   PLATFORMS:
     description: "Platforms to build to"
-    default: "linux/amd64,linux/arm64/v8"
-outputs:
-  page_url:
-    value:
-    description: 'URL to deployed GitHub Pages'
+    default: "linux/amd64,linux/arm64,linux/arm/v7"
 
 runs:
   using: "composite"
@@ -59,10 +55,9 @@ runs:
         echo VERSION=$VERSION
         
         docker buildx build \
-        --platform ${{inputs.PLATFORMS}} \
-        -t $IMAGE_ID:$VERSION \
-        -t $IMAGE_ID:latest \
-        .
+          --platform ${{inputs.PLATFORMS}} \
+          -t $IMAGE_ID:$VERSION \
+          -t $IMAGE_ID:latest .
         
         docker push $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:latest
