--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
     required: true
   PLATFORMS:
     description: "Platforms to build to"
-    default: "linux/amd64,linux/arm64,linux/arm/v7"
+    default: "linux/amd64,linux/arm64"
 
 runs:
   using: "composite"
@@ -55,6 +55,6 @@ runs:
         echo VERSION=$VERSION
         
         docker buildx build \
-          --platform ${{inputs.PLATFORMS}} \
+          --platform ${{ inputs.PLATFORMS }} \
           -t $IMAGE_ID:$VERSION \
-          -t $IMAGE_ID:latest --push . 
+          -t $IMAGE_ID:latest --push .
