--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,9 @@ inputs:
   PLATFORMS:
     description: "Platforms to build to"
     default: "linux/amd64,linux/arm64"
-
+  IMAGE_NAME:
+    description: "Final image name"
+    default: ""
 runs:
   using: "composite"
   steps:
@@ -47,7 +49,11 @@ runs:
     - name: Build image to dockerhub
       shell: bash
       run: |
-        IMAGE_ID=$(echo ${{ inputs.REGISTRY_USER }}/${{ github.event.repository.name }} | tr '[A-Z]' '[a-z]')
+        IMAGE_ID=$(echo ${{IMAGE_NAME}})
+        
+        if [[-z "$IMAGE_ID"]]; then 
+          IMAGE_ID=$(echo ${{ inputs.REGISTRY_USER }}/${{ github.event.repository.name }} | tr '[A-Z]' '[a-z]')
+        fi
         
         VERSION=$(echo "${{ steps.git_tag.outputs.tag }}" | sed -e 's,.*/\(.*\),\1,')
         
