--- a/action.yml
+++ b/action.yml
@@ -9,16 +9,16 @@ branding:
 
 inputs:
   REGISTRY_URL:
-    description: "URL Name of private Docker registry to push to"
+    description: "URL of the Docker registry to push to"
     default: "docker.io"
   REGISTRY_USER:
     description: "Registry user"
     required: true
   REGISTRY_PWD:
-    description: "Registry tag"
+    description: "Registry password or token"
     required: true
   PLATFORMS:
-    description: "Platforms to build to"
+    description: "Platforms to build for"
     default: "linux/amd64,linux/arm64"
   IMAGE_NAME:
     description: "Final image name"
@@ -26,7 +26,10 @@ inputs:
   DISABLE_CHECKOUT:
     description: "Disables checkout on start"
     default: "false"
-    type: boolean
+  OUTPUT:
+    description: "Comma-separated outputs like registry:<url>,file:<path>"
+    default: "registry:docker.io"
+
 runs:
   using: "composite"
   steps:
@@ -44,30 +47,62 @@ runs:
       uses: WyriHaximus/github-action-get-previous-tag@v1.4.0
       id: git_tag
 
-    - name: Login to Docker Hub
+    - name: Parse OUTPUT inputs
+      id: parse_output
+      shell: python
+      run: |
+        import os
+        
+        output_param = os.getenv("INPUT_OUTPUT", "")
+        entries = [o.strip() for o in output_param.split(",") if o.strip()]
+        
+        reg_urls = []
+        file_paths = []
+        
+        for entry in entries:
+            if entry.startswith("registry:"):
+                reg_urls.append(entry.split(":", 1)[1])
+            elif entry.startswith("file:"):
+                file_paths.append(entry.split(":", 1)[1])
+        
+        with open(os.environ["GITHUB_OUTPUT"], "a") as fh:
+            fh.write(f"registry_urls={'::'.join(reg_urls)}\n")
+            fh.write(f"file_paths={'::'.join(file_paths)}\n")
+
+    - name: Login to Docker Registry
+      if: ${{ steps.parse_output.outputs.registry_urls != '' }}
       uses: docker/login-action@v3
       with:
         registry: ${{ inputs.REGISTRY_URL }}
         username: ${{ inputs.REGISTRY_USER }}
         password: ${{ inputs.REGISTRY_PWD }}
 
-    - name: Build image to dockerhub
+    - name: Build image
       shell: bash
       run: |
-        IMAGE_ID=$(echo ${{ inputs.IMAGE_NAME }})
-        
-        if [ -z "$IMAGE_ID" ]; then 
-          IMAGE_ID=$(echo ${{ inputs.REGISTRY_USER }}/${{ github.event.repository.name }} | tr '[A-Z]' '[a-z]')
-        fi
-        
+        IMAGE_ID="${{ inputs.IMAGE_NAME }}"
+        [ -z "$IMAGE_ID" ] && IMAGE_ID="${{ inputs.REGISTRY_USER }}/${{ github.event.repository.name }}" && IMAGE_ID=$(echo "$IMAGE_ID" | tr '[:upper:]' '[:lower:]')
+
         VERSION=$(echo "${{ steps.git_tag.outputs.tag }}" | sed -e 's,.*/\(.*\),\1,')
-        
-        echo IMAGE_ID=$IMAGE_ID
-        echo VERSION=$VERSION
-        
-        docker buildx build \
-          --platform ${{ inputs.PLATFORMS }} \
-          -t $IMAGE_ID:$VERSION \
-          -t $IMAGE_ID:latest --push .
-        
-        echo "Docker image successfully built" >> $GITHUB_STEP_SUMMARY
+        echo "IMAGE_ID=$IMAGE_ID"
+        echo "VERSION=$VERSION"
+
+        TAGS="-t $IMAGE_ID:$VERSION -t $IMAGE_ID:latest"
+
+        # Build and push only if registry output exists
+        if [ "${{ steps.parse_output.outputs.registry_urls }}" != "" ]; then
+          docker buildx build --platform ${{ inputs.PLATFORMS }} $TAGS --push .
+          echo "Docker image pushed to registry"
+        fi
+
+        # Save image locally if file output exists
+        if [ "${{ steps.parse_output.outputs.file_paths }}" != "" ]; then
+          docker buildx build --platform ${{ inputs.PLATFORMS }} $TAGS --load .
+          for path in $(echo "${{ steps.parse_output.outputs.file_paths }}" | tr '::' ' '); do
+            mkdir -p "$path"
+            docker save $IMAGE_ID:$VERSION -o "$path/image-$VERSION.tar"
+            echo "Docker image saved to $path/image-$VERSION.tar"
+          done
+        fi
+
+        echo "Docker image processing completed" >> $GITHUB_STEP_SUMMARY
