[master] single platform build on dryrun

--- a/action.yml
+++ b/action.yml
@@ -71,14 +71,16 @@ runs:
         
         if [ "${{ inputs.DRYRUN == 'true' }}" ]; then 
           BUILD_FLAGS="--load"
+        PLATFORM_FLAGS="--platform linux/amd64"
         else 
           BUILD_FLAGS="--push"
+          PLATFORM_FLAGS="--platform ${{ inputs.PLATFORMS }}"
         fi
         
         docker buildx build \
             --cache-from=type=local,src=/tmp/.buildx-cache \
             --cache-to=type=local,dest=/tmp/.buildx-cache-new \
-            --platform ${{ inputs.PLATFORMS }} \
+            $PLATFORM_FLAGS \
             --target builder \
             -t $IMAGE_ID:$VERSION \
             -t $IMAGE_ID:latest \
